--- a/config-yml/facets.facet.language.yml
+++ b/config-yml/facets.facet.language.yml
@@ -25,6 +25,7 @@ widget:
       show_more_label: 'Show more'
 query_operator: or
 use_hierarchy: false
+keep_hierarchy_parents_active: false
 expand_hierarchy: false
 enable_parent_when_child_gets_disabled: true
 hard_limit: 0
