--- a/config-yml/user.role.anonymous.yml
+++ b/config-yml/user.role.anonymous.yml
@@ -15,3 +15,4 @@ permissions:
   - 'view published digital serial title entities'
   - 'view published serial issue entities'
   - 'view published serial page entities'
+  - 'view sp metadata'
