--- a/custom/modules/digital_serial/modules/digital_serial_import/digital_serial_import.info.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_import/digital_serial_import.info.yml
@@ -2,4 +2,5 @@ name: digital_serial_import
 type: module
 description: Digital Serial Import Tools
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: Serials
