--- a/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.info.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.info.yml
@@ -3,6 +3,7 @@ description: Digital serial issue content
 package: Serials
 
 core: 8.x
+core_version_requirement: ^8 || ^9
 type: module
 
 dependencies:
