--- a/custom/modules/digital_serial/modules/digital_serial_issue/config/install/views.view.digital_issue_list.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/config/install/views.view.digital_issue_list.yml
@@ -12,6 +12,7 @@ tag: ''
 base_table: digital_serial_issue
 base_field: id
 core: 8.x
+core_version_requirement: ^8 || ^9
 display:
   default:
     display_plugin: default
