--- a/custom/modules/serials/modules/serial_holding/serial_holding.info.yml
+++ b/custom/modules/serials/modules/serial_holding/serial_holding.info.yml
@@ -2,6 +2,7 @@ name: Serial Holding
 type: module
 description: Provides a serial holding entity for serial titles
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: Serials
 dependencies:
   - serials:serials
