--- a/.github/workflows/test-suite.yaml
+++ b/.github/workflows/test-suite.yaml
@@ -18,7 +18,7 @@ jobs:
             {
               attachments: [{
                 color: 'warning',
-                text: `${process.env.AS_REPO} ${process.env.CI_REF_NAME} - Build Started :shipit: (${process.env.AS_ACTION})\n${process.env.AS_COMMIT} ${process.env.AS_MESSAGE}\n${process.env.AS_AUTHOR}`,
+                text: `${process.env.AS_REPO} ${process.env.CI_REF_NAME} - Build Started :deployparrot: (${process.env.AS_WORKFLOW})\n${process.env.AS_COMMIT} ${process.env.AS_MESSAGE}\n${process.env.AS_AUTHOR}`,
               }]
             }
         env:
@@ -65,30 +65,10 @@ jobs:
           extensions: curl,dom,gd,mbstring,posix,yaml,zip
       -
         name: Install dockworker
-        run: composer install --prefer-dist --no-progress --no-suggest
+        run: composer install --prefer-dist --no-progress
       -
         name: Check PHP Coding Standards
         run: vendor/bin/dockworker validate:drupal:custom:php
-
-  drupal-9-readiness:
-    name: Drupal 9 Readiness
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      -
-        name: Install PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-          coverage: none
-          tools: composer:v2
-          extensions: curl,dom,gd,mbstring,posix,yaml,zip
-      -
-        name: Install dockworker
-        run: composer install --prefer-dist --no-progress --no-suggest
-      -
-        name: Check Custom Code D9 Readiness
-        run: vendor/bin/dockworker validate:drupal:9-upgrade
 
   build-image:
     name: Build Image
@@ -120,7 +100,7 @@ jobs:
           extensions: curl,dom,gd,mbstring,posix,yaml,zip
       -
         name: Install dockworker
-        run: composer install --prefer-dist --no-progress --no-suggest
+        run: composer install --prefer-dist --no-progress
       -
         name: Build Themes
         run: vendor/bin/dockworker theme:build-all
@@ -190,23 +170,6 @@ jobs:
           tools: composer:v2
           extensions: curl,dom,gd,mbstring,posix,yaml,zip
       -
-        name: Set Composer Cache Directory
-        id: composer-set-cache-dir
-        run: |
-          echo "::set-output name=dir::$(composer config cache-files-dir)"
-      -
-        name: Cache Composer Cache Dir
-        uses: actions/cache@v2
-        id: composercachecache
-        with:
-          path: ${{ steps.composer-set-cache-dir.outputs.dir }}
-          key: ${{ runner.os }}-composer-dockworker-drupal-${{ hashFiles('**/composer.json') }}
-          restore-keys: |
-            ${{ runner.os }}-composer-dockworker-drupal-${{ hashFiles('**/composer.json') }}
-            ${{ runner.os }}-composer-dockworker-drupal-
-            ${{ runner.os }}-composer-dockworker-
-            ${{ runner.os }}-composer-
-      -
         name: Download docker-compose
         uses: actions/download-artifact@v2
         with:
@@ -222,7 +185,7 @@ jobs:
         run: docker-compose pull --parallel --quiet
       -
         name: Install dockworker
-        run: composer install --prefer-dist --no-progress --no-suggest
+        run: composer install --prefer-dist --no-progress
       -
         name: Start container and check logs for errors
         run: vendor/bin/dockworker local:start --no-tail-logs --only-start --force-recreate
@@ -297,43 +260,19 @@ jobs:
         name: Set Image Tag
         run: cat /tmp/image_tag.env >> $GITHUB_ENV
       -
-        name: Set Composer Cache Directory
-        id: composer-set-cache-dir
-        run: |
-          echo "::set-output name=dir::$(composer config cache-files-dir)"
-      -
-        name: Cache Composer Cache Dir
-        uses: actions/cache@v2
-        id: composercachecache
-        with:
-          path: ${{ steps.composer-set-cache-dir.outputs.dir }}
-          key: ${{ runner.os }}-composer-dockworker-drupal-${{ hashFiles('**/composer.json') }}
-          restore-keys: |
-            ${{ runner.os }}-composer-dockworker-drupal-${{ hashFiles('**/composer.json') }}
-            ${{ runner.os }}-composer-dockworker-drupal-
-            ${{ runner.os }}-composer-dockworker-
-            ${{ runner.os }}-composer-
-      -
         name: Install dockworker
-        run: composer install --prefer-dist --no-progress --no-suggest
+        run: composer install --prefer-dist --no-progress
       -
         name: Deploy image to cluster
         run: vendor/bin/dockworker image:deploy $CI_REF_NAME --use-tag $BUILD_IMAGE_TAG
         env:
           GH_CONTAINER_REGISTRY_TOKEN: ${{secrets.GH_CONTAINER_REGISTRY_TOKEN}}
           GH_CONTAINER_REGISTRY_USER: ${{secrets.GH_CONTAINER_REGISTRY_USER}}
-      -
-        name: Check container startup logs for errors
-        run: vendor/bin/dockworker deployment:logs:check $CI_REF_NAME
-      -
-        name: Write out deployment logs
-        run: vendor/bin/dockworker deployment:logs $CI_REF_NAME
 
-  live-deploy-logs:
-    name: Live Deployment Logs
+  check-live-deployment:
+    name: Check Live Deployment Logs
     runs-on: ubuntu-latest
     needs: [deploy-live]
-    if: always() && (needs.deploy-live.result == 'success' || needs.deploy-live.result == 'failure')
     steps:
       - uses: FranzDiebold/github-env-vars-action@v2.1.0
       - uses: actions/checkout@v2
@@ -356,10 +295,13 @@ jobs:
         id: setcontext-kubectl
       -
         name: Install dockworker
-        run: composer install --prefer-dist --no-progress --no-suggest
+        run: composer install --prefer-dist --no-progress
       -
         name: Write out deployment logs
         run: vendor/bin/dockworker deployment:logs $CI_REF_NAME
+      -
+        name: Check container startup logs for errors
+        run: vendor/bin/dockworker deployment:logs:check $CI_REF_NAME
 
   newrelic-marker:
     name: Set Newrelic Marker
@@ -387,7 +329,7 @@ jobs:
   slack-results:
     name: Notify Slack of Build Results
     runs-on: ubuntu-latest
-    needs: [deploy-live]
+    needs: [check-live-deployment]
     if: always()
     steps:
       - uses: FranzDiebold/github-env-vars-action@v2.1.0
@@ -402,13 +344,12 @@ jobs:
       - uses: 8398a7/action-slack@v3
         with:
           status: custom
-          job_name:
           fields: workflow,job,commit,repo,ref,author,action,message
           custom_payload: |
             {
               attachments: [{
                 color: '${{ env.WORKFLOW_CONCLUSION }}' === 'success' ? 'good' : '${{ env.WORKFLOW_CONCLUSION }}' === 'failure' ? 'danger' : 'warning',
-                text: `${process.env.AS_REPO} ${process.env.CI_REF_NAME} - ${{ env.WORKFLOW_CONCLUSION }} ${{ env.DEPLOY_EMOJI }} (${process.env.AS_ACTION})\n${process.env.AS_COMMIT} ${process.env.AS_MESSAGE}\n${process.env.AS_AUTHOR}`,
+                text: `${process.env.AS_REPO} ${process.env.CI_REF_NAME} - ${{ env.WORKFLOW_CONCLUSION }} ${{ env.DEPLOY_EMOJI }} (${process.env.AS_WORKFLOW})\n${process.env.AS_COMMIT} ${process.env.AS_MESSAGE}\n${process.env.AS_AUTHOR}`,
               }]
             }
         env:
