--- a/config-yml/block.block.claro_local_actions.yml
+++ b/config-yml/block.block.claro_local_actions.yml
@@ -1,15 +1,15 @@
-uuid: 23a557c7-8f43-4005-81f8-f5daa39afde2
+uuid: cf73c935-bb91-4872-bd55-57001b7889b2
 langcode: en
 status: true
 dependencies:
   theme:
-    - bootstrap
+    - claro
 _core:
-  default_config_hash: ffxthelqQF8xcr4GTG4HlaNNsluiHftN0pujmQpW0bQ
-id: bootstrap_local_actions
-theme: bootstrap
-region: header
-weight: 20
+  default_config_hash: osZQ9lL2jTdH5am4LJiZ29RaivhzOf6vCpoRy6FZwIE
+id: claro_local_actions
+theme: claro
+region: content
+weight: -10
 provider: null
 plugin: local_actions_block
 settings:
