--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -33,6 +33,7 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  fontawesome: 0
   google_analytics: 0
   health_check: 0
   help: 0
@@ -80,13 +81,14 @@ module:
   serial_holding: 100
   minimal: 1000
 theme:
-  bootstrap: 0
   stable: 0
   classy: 0
   unb_lib_theme: 0
   bartik: 0
   newspapers_lib_unb_ca: 0
   seven: 0
+  bootstrap_barrio: 0
+  claro: 0
 profile: minimal
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
