--- a/config-yml/system.theme.yml
+++ b/config-yml/system.theme.yml
@@ -1,4 +1,4 @@
-admin: seven
+admin: claro
 default: newspapers_lib_unb_ca
 _core:
   default_config_hash: fOjer9hADYYnbCJVZMFZIIM1azTFWyg84ZkFDHfAbUg
