--- a/custom/themes/newspapers_lib_unb_ca/newspapers_lib_unb_ca.info.yml
+++ b/custom/themes/newspapers_lib_unb_ca/newspapers_lib_unb_ca.info.yml
@@ -16,6 +16,7 @@ regions:
   header: 'Top Bar'
   highlighted: 'Highlighted'
   help: 'Help'
+  breadcrumb: Breadcrumb
   content: 'Content'
   sidebar_first: 'Primary'
   sidebar_second: 'Secondary'
