--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -39,6 +39,9 @@ module:
   help: 0
   history: 0
   image: 0
+  jquery_ui: 0
+  jquery_ui_slider: 0
+  jquery_ui_touch_punch: 0
   language: 0
   languagefield: 0
   link: 0
