--- a/config-yml/newspapers_lib_unb_ca.settings.yml
+++ b/config-yml/newspapers_lib_unb_ca.settings.yml
@@ -22,3 +22,73 @@ header_uri: 'https://web.lib.unb.ca/core/inc-2015/head-nav.php?banner=nbnp'
 header_refresh_seconds: '900'
 header_write_path: /app/html/sites/default/files/head-nav.html.twig
 table: ''
+bootstrap_barrio_source: '0'
+bootstrap_barrio_fluid_container: 0
+bootstrap_barrio_region_clean_navigation: 0
+bootstrap_barrio_region_class_navigation: row
+bootstrap_barrio_region_clean_navigation_collapsible: 0
+bootstrap_barrio_region_class_navigation_collapsible: row
+bootstrap_barrio_region_clean_header: 1
+bootstrap_barrio_region_class_header: ''
+bootstrap_barrio_region_clean_highlighted: 1
+bootstrap_barrio_region_class_highlighted: ''
+bootstrap_barrio_region_clean_help: 0
+bootstrap_barrio_region_class_help: row
+bootstrap_barrio_region_clean_breadcrumb: 1
+bootstrap_barrio_region_class_breadcrumb: ''
+bootstrap_barrio_region_clean_content: 1
+bootstrap_barrio_region_class_content: ''
+bootstrap_barrio_region_clean_sidebar_first: 1
+bootstrap_barrio_region_class_sidebar_first: ''
+bootstrap_barrio_region_clean_sidebar_second: 1
+bootstrap_barrio_region_class_sidebar_second: ''
+bootstrap_barrio_region_clean_footer: 0
+bootstrap_barrio_region_class_footer: row
+bootstrap_barrio_region_clean_page_top: 0
+bootstrap_barrio_region_class_page_top: row
+bootstrap_barrio_region_clean_page_bottom: 0
+bootstrap_barrio_region_class_page_bottom: row
+show_top_header_login: 0
+show_top_header_logout: 0
+bootstrap_barrio_sidebar_position: both
+bootstrap_barrio_content_offset: '0'
+bootstrap_barrio_sidebar_collapse: 0
+bootstrap_barrio_sidebar_first_width: '3'
+bootstrap_barrio_sidebar_first_offset: '0'
+bootstrap_barrio_sidebar_second_width: '3'
+bootstrap_barrio_sidebar_second_offset: '0'
+bootstrap_barrio_button: 0
+bootstrap_barrio_button_size: ''
+bootstrap_barrio_button_outline: 0
+bootstrap_barrio_image_fluid: 0
+bootstrap_barrio_navbar_container: 0
+bootstrap_barrio_navbar_toggle: navbar-toggleable-xl
+bootstrap_barrio_navbar_top_navbar: 0
+bootstrap_barrio_navbar_top_position: ''
+bootstrap_barrio_navbar_top_color: ''
+bootstrap_barrio_navbar_top_background: ''
+bootstrap_barrio_navbar_position: ''
+bootstrap_barrio_navbar_color: ''
+bootstrap_barrio_navbar_background: ''
+bootstrap_barrio_navbar_top_class: ''
+bootstrap_barrio_navbar_class: ''
+bootstrap_barrio_navbar_flyout: 0
+bootstrap_barrio_navbar_slide: 0
+bootstrap_barrio_tabs_style: ''
+bootstrap_barrio_messages_widget: default
+bootstrap_barrio_radio: custom
+bootstrap_barrio_checkbox: custom
+bootstrap_barrio_select: standard
+bootstrap_barrio_file: standard
+bootstrap_barrio_navbar_top_affix: 0
+bootstrap_barrio_navbar_affix: 0
+bootstrap_barrio_sidebar_first_affix: 0
+bootstrap_barrio_sidebar_second_affix: 0
+bootstrap_barrio_scroll_spy: ''
+bootstrap_barrio_google_fonts: ''
+bootstrap_barrio_bootstrap_icons: 0
+bootstrap_barrio_icons: ''
+bootstrap_barrio_system_messages: ''
+bootstrap_barrio_table_style: table-striped
+bootstrap_barrio_table_hover: 1
+bootstrap_barrio_table_head: thead-dark
