NBNP-280 Add Breadcrumb region support, overrides for unconventional 'home' breadcrumb

--- a/custom/themes/newspapers_lib_unb_ca/newspapers_lib_unb_ca.libraries.yml
+++ b/custom/themes/newspapers_lib_unb_ca/newspapers_lib_unb_ca.libraries.yml
@@ -8,3 +8,6 @@ ajax_loading:
     dist/js/newspapers_core.ajax_loading.js: {}
   dependencies:
     - core/jquery
+    - core/jquery.once
+    - core/drupal
+    - core/drupalSettings
