--- a/config-yml/block.block.thisdayinnewbrunswickhistory.yml
+++ b/config-yml/block.block.thisdayinnewbrunswickhistory.yml
@@ -9,8 +9,8 @@ dependencies:
     - newspapers_lib_unb_ca
 id: thisdayinnewbrunswickhistory
 theme: newspapers_lib_unb_ca
-region: content
-weight: 0
+region: footer_top_second
+weight: -11
 provider: null
 plugin: this_day_in_n_b_history
 settings:
