NBNP-280 Purge front page block VS3 classes+subtheme rules

--- a/config-yml/views.view.featured.yml
+++ b/config-yml/views.view.featured.yml
@@ -618,7 +618,7 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
-      css_class: 'image-link-shadow well'
+      css_class: image-link-shadow
     cache_metadata:
       max-age: 0
       contexts:
