--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -982,7 +982,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<figure class=\"text-center\">\r\n{{ page_image }}\r\n<figcaption>\r\n<i class=\"glyphicon glyphicon-zoom-in\"></i>High-resolution image - page {{ page_no }}\r\n</figcaption>\r\n</figure>"
+            text: "<figure class=\"text-center\">\r\n{{ page_image }}\r\n<figcaption>\r\n<i class=\"fas fa-search-plus fa-sm mr-1\"></i>High-resolution image - page {{ page_no }}\r\n</figcaption>\r\n</figure>"
             make_link: true
             path: '/serials/{{ parent_digital_title_id }}/issues/{{ parent_digital_issue_id }}/pages/{{ parent_digital_page_id }}'
             absolute: false
@@ -1890,7 +1890,7 @@ display:
               field: issue_date_1
               rendered: true
               rendered_strip: false
-          row_class: center-block
+          row_class: ''
           default_row_class: false
           items: '6'
           itemsDesktop: '[1199,5]'
