--- a/config-yml/views.view.search_reports.yml
+++ b/config-yml/views.view.search_reports.yml
@@ -86,7 +86,7 @@ display:
           info:
             field_sort_title:
               sortable: true
-              default_sort_order: desc
+              default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
@@ -119,7 +119,7 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-          default: '-1'
+          default: field_sort_title
           empty_table: false
       row:
         type: fields
@@ -458,7 +458,7 @@ display:
           exposed: true
           expose:
             operator_id: search_api_fulltext_op
-            label: Keywords
+            label: 'Show publications that contain:'
             description: ''
             use_operator: false
             operator: search_api_fulltext_op
@@ -521,7 +521,7 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: '<h2 class="alert alert-success"><i class="fas fa-check-circle fa-sm mr-1"></i>Displaying @start - @end of @total results</h2>'
+          content: '<h2>Displaying @start - @end of @total results</h2>'
           plugin_id: result
       footer: {  }
       empty:
@@ -573,6 +573,7 @@ display:
         cache: false
         exposed_form: false
         use_ajax: false
+        sorts: false
       display_description: ''
       exposed_block: false
       exposed_form:
@@ -586,6 +587,7 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       use_ajax: true
+      sorts: {  }
     cache_metadata:
       max-age: -1
       contexts:
