--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -77,6 +77,7 @@ module:
   twig_tweak: 0
   update: 0
   user: 0
+  view_unpublished: 0
   views_data_export: 0
   views_infinite_scroll: 0
   views_ui: 0
