NBNP-315 Grant Newspaper Administrator role permission to view any unpublished Publication nodes

--- a/config-yml/user.role.newspaper_administrator.yml
+++ b/config-yml/user.role.newspaper_administrator.yml
@@ -28,6 +28,7 @@ permissions:
   - 'edit serial page entities'
   - 'edit terms in publisher'
   - 'use text format full_html'
+  - 'view any unpublished publication content'
   - 'view own unpublished content'
   - 'view published serial holding entities'
   - 'view unpublished digital serial title entities'
