Upstream image drupal:9.x-1.x -> drupal:9.x-2.x

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
   "config": {
     "preferred-install": {
       "*": "dist"
+    },
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   },
   "require": {
